--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "browser-image-compression": "^2.0.2",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "eases": "^1.0.8",
     "formik": "^2.2.9",
     "gsap": "^3.11.5",
