--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "browser-image-compression": "^2.0.2",
     "crypto-browserify": "^3.12.0",
