--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.12.0",
+    "@mui/styles": "^5.13.2",
     "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,23 +25,31 @@
     "browser-image-compression": "^2.0.2",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
+    "draft-js": "^0.11.7",
     "eases": "^1.0.8",
     "emoji-picker-react": "^4.4.9",
     "formik": "^2.2.9",
     "gsap": "^3.11.5",
+    "moment": "^2.29.4",
     "net": "^1.0.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.8.0",
+    "react-pdf": "^7.0.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "react-viewerjs": "^0.1.9",
+    "simplebar-react": "^3.2.4",
     "socket.io-client": "^4.6.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "styled-components": "^5.3.3",
+    "viewerjs": "^1.11.3",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34",
     "yup": "^1.1.1"
