--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.12.0",
     "@mui/styles": "^5.13.2",
+    "@mui/x-date-pickers": "^6.8.0",
     "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
@@ -26,6 +31,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "draft-js": "^0.11.7",
     "eases": "^1.0.8",
     "emoji-picker-react": "^4.4.9",
@@ -44,6 +50,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "react-viewerjs": "^0.1.9",
+    "react-webcam": "^7.1.1",
     "simplebar-react": "^3.2.4",
     "socket.io-client": "^4.6.1",
     "sockjs-client": "^1.6.1",
